[gd_scene load_steps=14 format=2]

[ext_resource path="res://scripts/EditorSelector.gd" type="Script" id=1]
[ext_resource path="res://assets/BackgroundEarth.png" type="Texture" id=2]
[ext_resource path="res://assets/akashi.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.313726, 0.129412, 0.129412, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 8.0
expand_margin_right = 8.0
expand_margin_top = 8.0
expand_margin_bottom = 8.0

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.243137, 0.101961, 0.101961, 1 )

[sub_resource type="DynamicFont" id=8]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=9]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[node name="EditorSelector" type="Node2D"]
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.1, 0.1 )
motion_mirroring = Vector2( 1025, 600 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
texture = ExtResource( 2 )

[node name="LineEdit" type="LineEdit" parent="."]
visible = false
margin_left = -183.0
margin_top = -23.0
margin_right = 184.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
max_length = 12
placeholder_text = "Enter name"

[node name="PlayButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -54.0
margin_top = -42.0
margin_right = 54.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
text = "Play"
flat = true

[node name="EditButton" type="Button" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -208.0
margin_top = -21.0
margin_right = -136.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 8 )
text = "Edit"
flat = true

[node name="NewButton" type="Button" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 143.0
margin_top = -19.0
margin_right = 229.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 8 )
text = "New"
flat = true

[node name="BackButton" type="Button" parent="."]
margin_left = -513.0
margin_top = -301.0
margin_right = -418.0
margin_bottom = -259.0
custom_fonts/font = SubResource( 9 )
custom_styles/hover = SubResource( 10 )
custom_styles/focus = SubResource( 11 )
text = "Back"
flat = true

[node name="BackButton2" type="Button" parent="."]
visible = false
margin_left = -513.0
margin_top = -301.0
margin_right = -418.0
margin_bottom = -259.0
custom_fonts/font = SubResource( 9 )
custom_styles/hover = SubResource( 10 )
custom_styles/focus = SubResource( 11 )
disabled = true
text = "Back"
flat = true

[connection signal="text_entered" from="LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="EditButton" to="." method="_on_EditButton_pressed"]
[connection signal="pressed" from="NewButton" to="." method="_on_NewButton_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="BackButton2" to="." method="_on_BackButton2_pressed"]
